<resources>
    <string name="app_name">Phone Assistant</string>
    <string name="notify_title">Phone Assistant</string>
    <string name="notify_in_background">Приложение работает в фоновом режиме</string>
    <string name="press_me">Нажми меня</string>
    <string name="close">Закрть</string>
    <string name="show">Показывать уведомления</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="check">Проверить</string>
    <string name="history">История запросов</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings">Настройки</string>
    <string name="insert_for_check">Введите номер для проверки</string>
    <string name="is_nothing">Здесь пока ничего нет</string>
    <string name="login_summary">Логин для доспута к сервису</string>
    <string name="password_summary">Пароль для доступа к сервису</string>
    <string name="url_summary">Адрес сервиса</string>
    <string name="app_preferences">Настройки доступа</string>
    <string name="clear">Очистить</string>
    <string name="position">Позиция уведомления</string>
    <string name="position_lock">на заблокированном экране</string>

    <string-array name="settings_position">
        <item>Сверху</item>
        <item>Посредине</item>
        <item>Снизу</item>
    </string-array>
    <string-array name="settings_position_entry">
        <item>48</item>
        <item>17</item>
        <item>80</item>
    </string-array>

</resources>
